# frink

./: .gitignore  README.es.md  README.md
.github/: FUNDING.yml
skill/: SKILL.md  frink.skill
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
